# Image-Processing-Platform

./: .gitignore  CMakeLists.txt  README.md  RUN_RELEASE.md  SUBMISSION_GUIDE.md  vcpkg.json
installer/: BuildInstaller.iss  README_installer.md  app.ico.txt  make_installer.bat
src/: BMPReader.cpp  BMPReader.h  DicomProcessingPipeline.cpp  DicomProcessingPipeline.h  DicomSegLoader.cpp  DicomSegLoader.h  DicomToolkit.cpp  DicomToolkit.h  FourierExperimentWidget.cpp  FourierExperimentWidget.h  ImageHistTools.cpp  ImageHistTools.h  ImageLabProcessor.cpp  ImageLabProcessor.h  ImageRestoration.cpp  ImageRestoration.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SegmentVolume.cpp  SegmentVolume.h  Segmentation3DView.cpp  Segmentation3DView.h  SegmentationMeshBuilder.cpp  SegmentationMeshBuilder.h  SegmentationOverlay.cpp  SegmentationOverlay.h  SliceNavigationController.cpp  SliceNavigationController.h  main.cpp
